--- a/packages/reduced-motion/package.json
+++ b/packages/reduced-motion/package.json
@@ -2,6 +2,18 @@
   "name": "@vue-gsap-flip/reduced-motion",
   "type": "module",
   "version": "0.1.0",
+  "description": "Reduced motion support for vue-gsap-flip animations",
+  "author": "Alberto Parziale <parziale.alberto@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lavolpecheprogramma/vue-gsap-flip.git"
+  },
+  "keywords": [
+    "vue",
+    "gsap",
+    "flip"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -21,11 +33,10 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "@vue-gsap-flip/core": "^0.1.0",
     "gsap": "^3.13.0",
     "vue": "^3.0.0"
   },
-  "devDependencies": {
+  "dependencies": {
     "@vue-gsap-flip/core": "^0.1.0"
   }
 }
