--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -2,6 +2,18 @@
   "name": "@vue-gsap-flip/vue-router",
   "type": "module",
   "version": "0.1.0",
+  "description": "Vue Router integration for vue-gsap-flip",
+  "author": "Alberto Parziale <parziale.alberto@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lavolpecheprogramma/vue-gsap-flip.git"
+  },
+  "keywords": [
+    "vue",
+    "gsap",
+    "flip"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -21,13 +33,14 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "@vue-gsap-flip/core": "^0.1.0",
     "gsap": "^3.13.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
+  "dependencies": {
+    "@vue-gsap-flip/core": "^0.1.0"
+  },
   "devDependencies": {
-    "@vue-gsap-flip/core": "^0.1.0",
     "vue-router": "^4.5.1"
   }
 }
