--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -9,6 +9,10 @@
     "type": "git",
     "url": "git+https://github.com/lavolpecheprogramma/vue-gsap-flip.git"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "tag": "latest"
+  },
   "keywords": [
     "vue",
     "gsap",
