--- a/packages/vitepress-router/package.json
+++ b/packages/vitepress-router/package.json
@@ -29,7 +29,7 @@
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "tag": "latest"
+    "access": "public"
   },
   "scripts": {
     "build": "vite build",
