--- a/packages/vitepress-router/package.json
+++ b/packages/vitepress-router/package.json
@@ -42,7 +42,7 @@
     "vue-router": "^4.0.0"
   },
   "dependencies": {
-    "@vue-gsap-flip/core": "^0.1.0"
+    "@vue-gsap-flip/core": "0.1.0"
   },
   "devDependencies": {
     "vitepress": "^1.6.3",
