--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,7 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "tag": "latest"
+    "access": "public"
   },
   "exports": {
     ".": {
