chore: update gitignore and publish config

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "workspaceRelease": {
     "npmRelease": true,
     "perPackageConfig": {
-      "packages/docs": {
+      "packages/docs/**": {
         "npmRelease": false
       }
     }
