--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -38,15 +38,22 @@
     "dist"
   ],
   "scripts": {
-    "build": "nuxt-module-build build"
+    "prepack": "npm run dev:prepare && nuxt-module-build build",
+    "dev": "npm run dev:prepare && nuxi dev playground",
+    "dev:build": "nuxi build playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare",
+    "build": "npm run lint && npm run prepack",
+    "lint": "eslint .",
+    "test:watch": "vitest watch",
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
+    "@nuxt/kit": "^4.0.1",
     "@vue-gsap-flip/core": "^1.2.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.6.2",
     "@nuxt/eslint-config": "^1.7.1",
-    "@nuxt/kit": "^4.0.1",
     "@nuxt/module-builder": "^1.0.2",
     "@nuxt/schema": "^4.0.1",
     "@types/node": "latest",
