--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -42,7 +42,7 @@
     "vue-router": "^4.0.0"
   },
   "dependencies": {
-    "@vue-gsap-flip/core": "1.2.0"
+    "@vue-gsap-flip/core": "^1.2.0"
   },
   "devDependencies": {
     "vue-router": "^4.5.1"
