--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -49,7 +49,8 @@
   },
   "dependencies": {
     "@nuxt/kit": "^4.0.1",
-    "@vue-gsap-flip/core": "^1.2.0"
+    "@vue-gsap-flip/core": "^1.2.0",
+    "@vue-gsap-flip/vue-router": "^1.0.2"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.6.2",
@@ -60,6 +61,7 @@
     "eslint": "^9.32.0",
     "nuxt": "^4.0.1",
     "typescript": "~5.8.3",
+    "vue-router": "^4.5.1",
     "vue-tsc": "^3.0.4"
   },
   "release": {
